fix: fix cumulative layout shift in mainLayout style

--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -1,3 +1,3 @@
 .mainLayout {
-  @apply relative mt-16;
+  @apply relative pt-16;
 }
